"feat: 添加登录跳转功能"

--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -51,7 +51,7 @@
         </div>
 
         <div class="ms-3">
-          <button type="button" class="btn btn-primary">Sign In</button>
+          <a type="button" class="btn btn-primary" href="/sign-in">Sign In</a>
         </div>
         </div>
       </div>
