--- a/app/frontend/template/home.tmpl
+++ b/app/frontend/template/home.tmpl
@@ -1,3 +1,4 @@
+{{define "home"}}
 {{template "header" .}}
   <div class="row">
     {{range .Item}}
@@ -11,3 +12,4 @@
     {{end}}    
   </div>
 {{template "footer"}}
+{{end}}
