--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -11,7 +11,7 @@
               integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" 
               crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body>
+  <body class="min-vh-100">
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
@@ -57,6 +57,6 @@
       </div>
     </nav>
       </header>
-<main>
-<div class="container-fluid">
+<main style="min-height: calc(80vh);">
+<div class="container-fluid py-3">
 {{end}}
