--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -14,7 +14,7 @@
   <body class="min-vh-100">
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
+          <div class="container">
               <img class="navbar-brand" href="#", src="/static/image/logo.jpg" alt="Phony" style="height: 3em;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -45,14 +45,22 @@
         <div class="ms-3">
           <i class="fa-solid fa-cart-shopping fa-xl"></i>
         </div>
-        
-        <div class="ms-3">
-          <i class="fa-solid fa-user fa-xl"></i>
-        </div>
+        {{if .user_id}}
 
+        <div class="dropdown">
+          <div class="ms-3 dropdown-toggle" data-bs-toggle="dropdown">
+              <i class="fa-solid fa-user fa-lg"></i>
+              <span>Hello</span>
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Log Out</a></li>
+          </ul>
+        </div>
+        {{ else }}
         <div class="ms-3">
           <a type="button" class="btn btn-primary" href="/sign-in">Sign In</a>
         </div>
+        {{ end }}
         </div>
       </div>
     </nav>
