--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           </li>
           <li class="nav-item dropdown">
@@ -35,7 +35,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
