--- a/app/frontend/template/sign-up.tmpl
+++ b/app/frontend/template/sign-up.tmpl
@@ -9,11 +9,11 @@
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password {{template "required"}}</label>
-              <input type="password" class="form-control" id="password">
+              <input type="password" class="form-control" id="password" name="password">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password Confirm {{template "required"}}</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password_confirm" name="password_confirm">
               </div>
             <div class="mb-3">
                 Already have a account, click here to <a href="/sign-in">Sign In</a>.
