--- a/app/frontend/template/sign-up.tmpl
+++ b/app/frontend/template/sign-up.tmpl
@@ -5,14 +5,14 @@
         <form method="post" action="/auth/register">
             <div class="mb-3">
               <label for="email" class="form-label">Email address {{template "required"}}</label>
-              <input type="email" class="form-control" id="email">
+              <input type="email" class="form-control" id="email", name="email">
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password {{template "required"}}</label>
               <input type="password" class="form-control" id="password" name="password">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password Confirm {{template "required"}}</label>
+                <label for="password_confirm" class="form-label">Password Confirm {{template "required"}}</label>
                 <input type="password" class="form-control" id="password_confirm" name="password_confirm">
               </div>
             <div class="mb-3">
