--- a/app/frontend/template/header.tmpl
+++ b/app/frontend/template/header.tmpl
@@ -1,7 +1,6 @@
 {{define "header"}}
   <!doctype html>
   <html lang="en">
-  
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,21 +26,22 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Categories
+                Categories
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">T-shirt</a></li>
-              <li><a class="dropdown-item" href="#">Stickers</a></li>
+                <li><a class="dropdown-item" href="/category/t-shirt">T-shirt</a></li>
+                <li><a class="dropdown-item" href="/category/sticker">Sticker</a></li>
             </ul>
-          </li>
+            </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex ms-auto" role="search" action="/search" method="get">
+          <input class="form-control me-2" type="search" name="q" placeholder="Search"
+                 aria-label="Search" value="{{ .q }}">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+      </form>
         <div class="ms-3">
           <i class="fa-solid fa-cart-shopping fa-xl"></i>
         </div>
